<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_login"
        android:title="@string/menu_login"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_register"
        android:title="@string/menu_register"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_contact_us"
        android:title="@string/menu_contact_us"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_meirkids_web"
        android:title="@string/menu_meir_kids_web"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_privacy_policy"
        android:title="@string/menu_privacy_policy"
        app:showAsAction="never"/>


</menu>